# polywit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example-workflow.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  workflow.yaml
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  documentation_improvement.yaml  enhancement.yaml  feature_request.yaml  validator_request.yaml  ✅-validator-request.md  ✅-validator-request.yaml  ✨-feature-request.md  ✨-feature-request.yaml  🐛-bug-report.md  🐛-bug-report.yaml  📝-documentation-improvement.md  📝-documentation-issue.md
.github/workflows/: cicd.yaml  pull-request.yml  release.yaml
doc/: implementation.md  terminology.md
docs/: astro.config.mjs  package-lock.json  package.json
polywit/: __init__.py  __main__.py  polywit.py
polywit/_typing/: __init__.py
polywit/base/: __init__.py  file_processors.py  test_harness.py  validator.py
polywit/engines/base/: execution_validation_engine.py  (+3 more)
polywit/exceptions/: __init__.py  exceptions.py  exceptions_handlers.py
polywit/file_processors/: base.py  java.py
polywit/java/: __init__.py  file_processors.py  test_harness.py  validator.py
polywit/kotlin/: __init__.py  file_processors.py  test_harness.py  validator.py
polywit/types/: __init__.py  aliases.py
polywit/utils/: __init__.py  witness_utils.py
polywit/validation_harnesses/: base.py  java.py
tests/base/: test_file_processors.py  test_validator.py
tests/java/: test_file_processors.py
(+6 files in other folders)
