[metadata]
name = polywit
version = attr: polywit.__version__
author = Joss Moffatt
description = A poly-language execution-based violation-witness validator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polywit/polywit
project_urls =
  Issue Tracker = https://github.com/polywit/polywit


[options]
packages=find:
include_package_data = True

[options.package_data]
* = *.java

[options.entry_points]
console_scripts =
  polywit = polywit.__main__:main

[options.packages.find]
exclude =
    tests*